--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation 'com.journeyapps:zxing-android-embedded:3.1.0@aar'
     implementation 'me.dm7.barcodescanner:zxing:1.9'
+    implementation "com.google.zxing:core:3.3.0"
+    implementation 'com.google.zxing:javase:3.3.0'
 }
