--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Ingame"></activity>
+        <activity android:name=".ShowQR"></activity>
+        <activity android:name=".Ingame" />
         <activity android:name=".StartScreen" />
         <activity android:name=".MainActivity">
             <intent-filter>
