--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".IsDead"></activity>
+        <activity android:name=".Scanning"></activity>
+        <activity android:name=".EndOfTurn" />
+        <activity android:name=".IsDead" />
         <activity android:name=".Eating" />
         <activity android:name=".Breeding" />
         <activity android:name=".ShowQR" />
